# cnr_ros_controllers

./: .gitignore  .upstream.repos  dependencies.rosinstall
analog_state_publisher/: CMakeLists.txt  package.xml  plugin.xml
analog_state_publisher/include/analog_state_publisher/: analog_state_publisher.h
analog_state_publisher/src/analog_state_publisher/: analog_state_publisher.cpp
cartesian_motion_msgs/: CMakeLists.txt  package.xml
cartesian_motion_msgs/action/: cartMotion.action  simpleTouch.action
cnr_cart_teleop_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_cart_teleop_controller/include/cnr_cart_teleop_controller/: cnr_cart_teleop_controller.h
cnr_cart_teleop_controller/src/cnr_cart_teleop_controller/: cnr_cart_teleop_controller.cpp
cnr_cartesian_motion_ctrl/: CMakeLists.txt  package.xml  plugin.xml
cnr_cartesian_motion_ctrl/include/cnr_cartesian_motion_ctrl/: cnr_cartesian_motion_ctrl.h
cnr_cartesian_motion_ctrl/src/: cnr_cartesian_motion_ctrl.cpp
cnr_cartesian_position_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_cartesian_position_controller/action/: RelativeMove.action
cnr_cartesian_position_controller/include/cnr_cartesian_position_controller/: cnr_cartesian_position_controller.h
cnr_cartesian_position_controller/src/cnr_cartesian_position_controller/: cnr_cartesian_position_controller.cpp
cnr_cartesian_position_controller/test/: test.launch
cnr_cartesian_teleop_controller/: plugin.xml
cnr_homing_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_homing_controller/include/cnr_homing_controller/: cnr_homing_controller.h
cnr_homing_controller/src/cnr_homing_controller/: cnr_homing_controller.cpp
cnr_homing_controller/test/: test.cpp  test.launch
cnr_joint_impedance_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_joint_impedance_controller/include/cnr_joint_impedance_controller/: cnr_joint_impedance_controller.h
cnr_joint_impedance_controller/src/cnr_joint_impedance_controller/: cnr_joint_impedance_controller.cpp
cnr_joint_state_publisher/: CMakeLists.txt  package.xml  plugin.xml
cnr_joint_state_publisher/include/cnr_joint_state_publisher/: cnr_joint_state_publisher.h
cnr_joint_state_publisher/src/cnr_joint_state_publisher/: cnr_joint_state_publisher.cpp
cnr_joint_state_publisher/test/: .test.cpp.swp  test.cpp  test.launch
cnr_joint_teleop_controller/: CMakeLists.txt  CMakeLists.txt.user.fb1378e  my_robot.urdf  package.xml  plugin.xml
cnr_joint_teleop_controller/include/cnr_joint_teleop_controller/: cnr_joint_teleop_controller.h
cnr_joint_teleop_controller/src/cnr_joint_teleop_controller/: cnr_joint_teleop_controller.cpp
cnr_joint_teleop_controller/test/: test.cpp  test.launch
cnr_open_loop_effort_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_open_loop_effort_controller/include/cnr_open_loop_effort_controller/: cnr_open_loop_effort_controller.h
cnr_open_loop_effort_controller/script/: print_controller.m
cnr_open_loop_effort_controller/src/cnr_open_loop_effort_controller/: cnr_open_loop_effort_controller.cpp
cnr_open_loop_position_controller/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_open_loop_position_controller/include/cnr_open_loop_position_controller/: cnr_open_loop_position_controller.h
cnr_open_loop_position_controller/src/cnr_open_loop_position_controller/: cnr_open_loop_position_controller.cpp
cnr_open_loop_posvel_controller/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_open_loop_posvel_controller/include/cnr_open_loop_posvel_controller/: cnr_open_loop_posvel_controller.h
cnr_open_loop_posvel_controller/src/cnr_open_loop_posvel_controller/: cnr_open_loop_posvel_controller.cpp
cnr_position_to_velocity_controller/: CMakeLists.txt  CMakeLists.txt.user.acc61f1  README.md  cnr_position_to_velocity_controller.kdev4  package.xml  plugin.xml
cnr_position_to_velocity_controller/.kdev4/: cnr_position_to_velocity_controller.kdev4
cnr_position_to_velocity_controller/include/cnr_position_to_velocity_controller/: cnr_position_to_velocity_controller.h  cnr_position_to_velocity_math.h
cnr_position_to_velocity_controller/script/: create_controller.m  position_to_velocity_controller.slx
cnr_position_to_velocity_controller/script/test_microinterpolator/: foh.m  soh.m  test_microinterpolator.m
cnr_position_to_velocity_controller/src/cnr_position_to_velocity_controller/: cnr_position_to_velocity_controller.cpp  cnr_position_to_velocity_math.cpp
cnr_simple_touch_controller/cnr_simple_touch_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_simple_touch_controller/simple_touch_controller_msgs/: CMakeLists.txt  package.xml
cnr_simple_touch_controller/simple_touch_controller_msgs/action/: simpleTouch.action
cnr_velocity_to_torque_controller/: CMakeLists.txt  CMakeLists.txt.user.fb1378e  package.xml  plugin.xml
cnr_velocity_to_torque_controller/include/cnr_velocity_to_torque_controller/: cnr_velocity_to_torque_controller.h
cnr_velocity_to_torque_controller/script/: create_controller.m
cnr_velocity_to_torque_controller/src/cnr_velocity_to_torque_controller/: cnr_velocity_to_torque_controller.cpp
dummy_controller/: CMakeLists.txt  package.xml  plugin.xml
dummy_controller/include/dummy_controller/: dummy_controller.h
dummy_controller/src/dummy_controller/: dummy_controller.cpp
inverse_kinematics_qp_controller/: CMakeLists.txt  package.xml  plugin.xml
inverse_kinematics_qp_controller/include/inverse_kinematics_qp_controller/: inverse_kinematics_qp_controller.h
inverse_kinematics_qp_controller/src/inverse_kinematics_qp_controller/: inverse_kinematics_qp_controller.cpp
inverse_kinematics_qp_math/: CMakeLists.txt  package.xml
inverse_kinematics_qp_math/config/: test.yaml
inverse_kinematics_qp_math/launch/: ik_qp_math_test_launcher.launch
inverse_kinematics_qp_math/src/: test_inverse_kinematics_qp_math_node.cpp
robot_state_controller/: CMakeLists.txt  package.xml  plugin.xml
robot_state_controller_msgs/: CMakeLists.txt  package.xml
robot_state_controller_msgs/msg/: PoseTwistArray.msg
(+43 files in other folders)
