<?xml version="1.0"?>
<package format="2">
  <name>analog_state_publisher</name>
  <version>0.0.0</version>
  <description>The advanced_joint_state_publisher package</description>

  <maintainer email="nicola.pedrocchi@stiima.cnr.it">nicola</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>eigen_state_space_systems</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>subscription_notifier</build_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>cnr_hardware_interface</build_depend>

  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>eigen_state_space_systems</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>subscription_notifier</build_export_depend>
  <build_export_depend>cnr_controller_interface</build_export_depend>
  <build_export_depend>cnr_hardware_interface</build_export_depend>

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>eigen_state_space_systems</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>subscription_notifier</exec_depend>
  <exec_depend>cnr_controller_interface</exec_depend>
  <exec_depend>cnr_hardware_interface</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
