<?xml version="1.0"?>
<package format="2">
  <name>cartesian_motion_msgs</name>
  <version>0.0.0</version>
  <description>The cartesian_motion_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marie@todo.todo">marie</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime   </depend>
  <depend>geometry_msgs     </depend>
  <depend>actionlib_msgs    </depend>
  <depend>std_msgs          </depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
