<?xml version="1.0"?>
<package format="2">
  <name>cnr_cartesian_motion_ctrl</name>
  <version>0.0.0</version>
  <description>The cnr_cartesian_motion_ctrl package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marie@todo.todo">marie</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>controller_interface        </depend>
  <depend>cnr_controller_interface    </depend>
  <depend>geometry_msgs               </depend>
  <depend>cnr_hardware_interface      </depend>
  <depend>roscpp                      </depend>
  <depend>rosdyn_core                 </depend>
  <depend>subscription_notifier       </depend>
  <depend>actionlib                   </depend>
  <depend>cartesian_motion_msgs       </depend>
  <depend>actionlib_msgs              </depend>
  <depend>tf_conversions              </depend>
  <depend>cnr_cart_teleop_controller  </depend>
  <depend>tf                          </depend>
  <depend>inverse_kinematics_qp_controller</depend>
                                                      
  <export>
  <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
