<?xml version="1.0"?>
<package>
  <name>cnr_position_to_velocity_controller</name>
  <version>0.0.0</version>
  <description>The cnr_position_to_velocity_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="iras@stiima.cnr.it">Jane Doe</maintainer> -->
  <maintainer email="iras@stiima.cnr.it">maxwell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>cnr_hardware_interface</build_depend>
  <build_depend>state_space_controllers</build_depend>
  <build_depend>state_space_ros</build_depend>
  <build_depend>subscription_notifier</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>cnr_controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>cnr_hardware_interface</run_depend>
  <run_depend>state_space_controllers</run_depend>
  <run_depend>state_space_ros</run_depend>
  <run_depend>subscription_notifier</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>urdf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
		<controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
